--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-highlighter: "pygments"
+highlighter: "rouge"
 name: michaelrbernste.in
 description: Michael R. Bernstein's Personal Blog
 url: http://michaelrbernste.in
